--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -81,7 +81,7 @@
 }
 
 /* Add a grey background color to dropdown links on hover */
-.dropdown-content a:hover {
+.dropdown-content a:hover, a:active {
   background-color: #ddd;
   width: 100%
 }
