tentativa resolução bug hover mobilie

--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -81,13 +81,13 @@
 }
 
 /* Add a grey background color to dropdown links on hover */
-.dropdown-content a:hover, a:active {
+.dropdown-content a:hover, .dropdown-content a:active {
   background-color: #ddd;
   width: 100%
 }
 
 /* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {
+.dropdown:hover .dropdown-content, .dropdown:active .dropdown-content  {
   display: block;
 }
 
