--- a/assets/css/projetos.css
+++ b/assets/css/projetos.css
@@ -9,3 +9,12 @@
   border-top: solid 1px rgba(171, 0, 201, 0.304);
   border-bottom: solid 1px rgba(171, 0, 201, 0.304);
 }
+.tag-escrita{
+background-color: rgb(229, 206, 255);
+color: rgb(52, 0, 100);
+padding-left: 5px;
+padding-right: 5px;
+padding-top: 2px;
+padding-bottom: 2px;
+text-align: center;
+}
