--- a/css/styles.css
+++ b/css/styles.css
@@ -98,6 +98,15 @@ body {
     padding-left: 16px;
 }
 
+hr.content-divider {
+    border: none;
+    height: 1px;
+    background-color: #6b629d;
+    opacity: 0.3;
+    margin: 1.5em auto;
+    width: 80%;
+}
+
 .menu .subsection.active {
     display: block;
 }
@@ -123,6 +132,11 @@ body {
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     text-align: center;
+}
+
+.content-block.title-block {
+    grid-column: 1 / -1;  /* Make it span all columns */
+    background-color: #fff;
 }
 
 .content-block h1,
