--- a/css/styles.css
+++ b/css/styles.css
@@ -122,8 +122,10 @@ hr.content-divider {
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
     box-sizing: border-box;
+    max-width: 1200px;
     width: 100%;
     margin: 80px auto 0 auto;
+    justify-content: center;
 }
 
 .content-block {
@@ -136,7 +138,6 @@ hr.content-divider {
 
 .content-block.title-block {
     grid-column: 1 / -1;  /* Make it span all columns */
-    background-color: #fff;
 }
 
 .content-block h1,
