--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@ body {
     font-family: sans-serif;
     font-weight: 350;
     margin: 0;
-    background-color: #f4f4f4;
+    background-color: #f7f1ff;
     overflow-x: hidden;
 }
 
@@ -48,7 +48,7 @@ body {
     display: block;
     width: 100%;
     height: 2px;
-    background-color: #333;
+    background-color: #a397eb;
     transition: all 0.3s ease;
 }
 
@@ -124,7 +124,7 @@ hr.content-divider {
     box-sizing: border-box;
     max-width: 1200px;
     width: 100%;
-    margin: 80px auto 0 auto;
+    margin: 50px auto 0 auto;
     justify-content: center;
 }
 
@@ -132,7 +132,7 @@ hr.content-divider {
     background-color: #fff;
     padding: 20px;
     border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    box-shadow: 0 2px 4px rgba(138, 92, 255, 0.147);
     text-align: center;
 }
 
