--- a/css/styles.css
+++ b/css/styles.css
@@ -122,7 +122,6 @@ hr.content-divider {
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
     box-sizing: border-box;
-    max-width: 1200px;
     width: 100%;
     margin: 50px auto 0 auto;
     justify-content: center;
@@ -137,6 +136,7 @@ hr.content-divider {
 }
 
 .content-block.title-block {
+    padding: 10px;
     grid-column: 1 / -1;  /* Make it span all columns */
 }
 
@@ -147,9 +147,4 @@ hr.content-divider {
 .content-block h5,
 .content-block h6 {
     font-weight: inherit;
-}
-
-/* Mobile Styles */
-@media (max-width: 768px) {
-    .content { grid-template-columns: 1fr; }
 }
