--- a/css/poesias.css
+++ b/css/poesias.css
@@ -33,12 +33,18 @@
 
 #poesias-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(300px, 2fr));
     gap: 20px;
     padding: 20px;
     width: 100%;
     margin: 0 auto;
     box-sizing: border-box;
+}
+
+@media (max-width: 700px) {
+    #poesias-grid {
+        grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    }
 }
 
 .poesia-item {
